# p9i

./: # Запуск тестов  # Установка зависимостей  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-requirements.txt  CLAUDE.md  HTTPS-SETUP-SUMMARY.md  IMPLEMENTATION_QUEUE.md  MCP_INTEGRATION.md  MCP_PROXY_SETUP.md  MIGRATION_PLAN.md  MIGRATION_REVIEW.md  MIGRATION_SYSTEM.md  Makefile  README-HTTPS.md  README.md  SPRINT2_TASKS.md  SYSTEM_ARCHITECTURE.md  docker-compose.ssl.yml  docker-compose.yml  mcp_proxy.py  mcp_proxy_simple.py  p9i_stdio_bridge.py  pyproject.toml  requirements.txt  test_mcp_client.py
app/: auth.py  config.py  crud.py  cud.py  database.py  db.py  main.py  models.py  rate_limiter.py  redis_client.py  schemas.py
cli/: README.md  __init__.py  jwt.py  main.py  p9i_client.py
config/: settings.yaml
database/: schema.sql
docker/: Caddyfile  Dockerfile
docs/: MCP-CONFIG.md  README.md  helm-migration-plan.md  p9i-write-error-analysis.md  routing-analysis.md  uiux-sources.md  uiux-sync.md
examples/: p9i_mcp_integration.py
k8s/: 00-namespace.yaml  01-nginx-config.yaml  02-db-redis.yaml  03-mcp-server.yaml  04-hpa.yaml  04-ingress.yaml
nginx/: Dockerfile  nginx.conf
prompts/: promt-adr-template-migration.md  promt-agent-init.md  promt-bug-fix.md  promt-ci-cd-pipeline.md  promt-consolidation.md  promt-copilot-instructions-update.md  promt-db-baseline-governance.md  promt-feature-add.md  promt-feature-remove.md  promt-index-update.md  promt-onboarding.md  promt-project-adaptation.md  promt-prompt-creator.md  promt-quality-test.md  promt-readme-sync.md  promt-refactoring.md  promt-security-audit.md  promt-sync-optimization.md  promt-sync-report-export.md  promt-system-adapt.md  promt-verification.md  promt-versioning-policy.md  promt-workflow-orchestration.md  registry.json
scripts/: setup-ssl.sh  start-https.sh  sync-uiux.sh  test-https-local.sh  test-https.sh  verify-adr-checklist.sh  verify-all-adr.sh
src/: __init__.py
web/: app.py
(+302 files in other folders)
