# pyproject.toml
[project]
name = "p9i"
version = "1.0.0"
description = "MCP-сервис для управления AI-промтами с полным циклом"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "hiredis>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0"
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src"]
[tool.black]
line-length = 100
[tool.ruff]
line-length = 100
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=html"
